// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`测试 SwipeCarousel 1`] = `
Array [
  .c4 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1em;
  height: 1em;
  overflow: hidden;
  fill: currentColor;
}

.c3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: 0;
  margin: 0;
  border: none;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font-size: 14px;
  width: 20px;
  height: 32px;
  border-radius: 2px;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  background-color: rgba(0,0,0,0.5);
  color: rgba(255,255,255,1);
}

.c3:hover,
.c3:active {
  background-color: rgba(0,0,0,0.3);
}

.c6 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: 0;
  margin: 0;
  border: none;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font-size: 14px;
  width: 20px;
  height: 32px;
  border-radius: 2px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  background-color: rgba(0,0,0,0.5);
  color: rgba(255,255,255,1);
}

.c6:hover,
.c6:active {
  background-color: rgba(0,0,0,0.3);
}

.c12 {
  display: inline-block;
  cursor: pointer;
  padding: 4px 0;
  margin-right: 8px;
}

.c12::before {
  box-sizing: content-box;
  content: '';
  display: block;
  height: 4px;
  width: 60px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
}

.c12::before {
  background-color: rgba(255,255,255,1);
}

.c13 {
  display: inline-block;
  cursor: pointer;
  padding: 4px 0;
}

.c13::before {
  box-sizing: content-box;
  content: '';
  display: block;
  height: 4px;
  width: 32px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
}

.c13::before {
  background-color: rgba(255,255,255,0.3);
}

.c13:hover::before {
  background-color: rgba(255,255,255,0.5);
}

.c11 {
  white-space: nowrap;
  position: absolute;
  left: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  bottom: 16px;
  padding: 0 20px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  top: 0;
  height: 100%;
  z-index: 2;
  left: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  top: 0;
  height: 100%;
  z-index: 2;
  right: 0;
}

.c7 {
  position: relative;
  overflow-x: hidden;
}

.c9 {
  position: relative;
  -webkit-transition: -webkit-transform 10ms cubic-bezier(0.4,0,0.2,1);
  -webkit-transition: transform 10ms cubic-bezier(0.4,0,0.2,1);
  transition: transform 10ms cubic-bezier(0.4,0,0.2,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100000px;
  height: 100%;
}

.c8 {
  height: 100%;
}

.c0 {
  position: relative;
}

.c0 .c10 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c14 .c2 {
  opacity: 0;
}

.c14:hover .c2 {
  opacity: 1;
}

.c14 .c10 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c15 .c10 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c16 .c10 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<div
    className="c0"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onScroll={[Function]}
  >
    <div
      className="c1 muya-carousel-pager-prev"
    >
      <button
        className="c2 c3 muya-carousel-pager-prev-btn"
        onClick={[Function]}
      >
        <svg
          aria-hidden="false"
          className="c4"
          focusable="false"
          viewBox="0 0 1024 1024"
        >
          <path
            d="M501.725 499.81l260.036-381.385a21.67 21.67 0 00-5.742-30.121L626 3.575a21.67 21.67 0 00-29.796 5.851l-333.93 490.385a21.67 21.67 0 000 24.378l333.93 490.276a21.67 21.67 0 0029.796 5.96l129.476-84.512a21.67 21.67 0 006.284-30.013L501.725 524.514a21.67 21.67 0 010-24.703z"
          />
        </svg>
      </button>
    </div>
    <div
      className="c5 muya-carousel-pager-next"
    >
      <button
        className="c2 c6 muya-carousel-pager-next-btn"
        onClick={[Function]}
      >
        <svg
          aria-hidden="false"
          className="c4"
          focusable="false"
          viewBox="0 0 1024 1024"
        >
          <path
            d="M522.187 499.81L262.15 118.426a21.67 21.67 0 015.959-30.121L398.128 3.792a21.67 21.67 0 0129.796 5.851l333.82 490.168a21.67 21.67 0 010 24.378l-333.929 490.276a21.67 21.67 0 01-29.795 5.96l-129.477-84.512a21.67 21.67 0 01-6.284-30.013l260.036-381.386a21.67 21.67 0 00-.108-24.703z"
          />
        </svg>
      </button>
    </div>
    <div
      className="c7 c8 muya-carousel-swipe"
    >
      <div
        className="c9 muya-swipe-panel"
        onTransitionEnd={[Function]}
        style={
          Object {
            "transform": "translate(0px, 0)",
          }
        }
      >
        1111
      </div>
    </div>
    <div
      className="c10 c11 muya-carousel-indicator"
    >
      <div
        className="c12 muya-carousel-indicator-active muya-carousel-indicator-index"
        onClick={[Function]}
      />
      <div
        className="c13 muya-carousel-indicator-index"
        onClick={[Function]}
      />
    </div>
  </div>,
  .c6 {
  display: inline-block;
  cursor: pointer;
  padding: 4px 0;
  margin-right: 8px;
}

.c6::before {
  box-sizing: content-box;
  content: '';
  display: block;
  height: 4px;
  width: 60px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
}

.c6::before {
  background-color: rgba(255,255,255,1);
}

.c7 {
  display: inline-block;
  cursor: pointer;
  padding: 4px 0;
}

.c7::before {
  box-sizing: content-box;
  content: '';
  display: block;
  height: 4px;
  width: 32px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
}

.c7::before {
  background-color: rgba(255,255,255,0.3);
}

.c7:hover::before {
  background-color: rgba(255,255,255,0.5);
}

.c5 {
  white-space: nowrap;
  position: absolute;
  left: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  bottom: 16px;
  padding: 0 20px;
}

.c1 {
  position: relative;
  overflow-x: hidden;
}

.c3 {
  position: relative;
  -webkit-transition: -webkit-transform 10ms cubic-bezier(0.4,0,0.2,1);
  -webkit-transition: transform 10ms cubic-bezier(0.4,0,0.2,1);
  transition: transform 10ms cubic-bezier(0.4,0,0.2,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100000px;
  height: 100%;
}

.c2 {
  height: 100%;
}

.c0 {
  position: relative;
}

.c0 .c4 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 .c4 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 .c4 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c10 .c4 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<div
    className="c0"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onScroll={[Function]}
  >
    <div
      className="c1 c2 muya-carousel-swipe"
    >
      <div
        className="c3 muya-swipe-panel"
        onTransitionEnd={[Function]}
        style={
          Object {
            "transform": "translate(0px, 0)",
          }
        }
      >
        1111
      </div>
    </div>
    <div
      className="c4 c5 muya-carousel-indicator"
    >
      <div
        className="c6 muya-carousel-indicator-active muya-carousel-indicator-index"
        onClick={[Function]}
      />
      <div
        className="c7 muya-carousel-indicator-index"
        onClick={[Function]}
      />
    </div>
  </div>,
  .c4 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1em;
  height: 1em;
  overflow: hidden;
  fill: currentColor;
}

.c3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: 0;
  margin: 0;
  border: none;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font-size: 14px;
  width: 20px;
  height: 32px;
  border-radius: 2px;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  background-color: rgba(0,0,0,0.5);
  color: rgba(255,255,255,1);
}

.c3:hover,
.c3:active {
  background-color: rgba(0,0,0,0.3);
}

.c6 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: 0;
  margin: 0;
  border: none;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font-size: 14px;
  width: 20px;
  height: 32px;
  border-radius: 2px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  background-color: rgba(0,0,0,0.5);
  color: rgba(255,255,255,1);
}

.c6:hover,
.c6:active {
  background-color: rgba(0,0,0,0.3);
}

.c12 {
  display: inline-block;
  cursor: pointer;
  padding: 4px 0;
  margin-right: 8px;
}

.c12::before {
  box-sizing: content-box;
  content: '';
  display: block;
  height: 4px;
  width: 60px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
}

.c12::before {
  background-color: rgba(255,255,255,1);
}

.c13 {
  display: inline-block;
  cursor: pointer;
  padding: 4px 0;
}

.c13::before {
  box-sizing: content-box;
  content: '';
  display: block;
  height: 4px;
  width: 32px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
}

.c13::before {
  background-color: rgba(255,255,255,0.3);
}

.c13:hover::before {
  background-color: rgba(255,255,255,0.5);
}

.c11 {
  white-space: nowrap;
  position: absolute;
  left: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  bottom: 16px;
  padding: 0 20px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  top: 0;
  height: 100%;
  z-index: 2;
  left: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  top: 0;
  height: 100%;
  z-index: 2;
  right: 0;
}

.c7 {
  position: relative;
  overflow-x: hidden;
}

.c9 {
  position: relative;
  -webkit-transition: -webkit-transform 10ms cubic-bezier(0.4,0,0.2,1);
  -webkit-transition: transform 10ms cubic-bezier(0.4,0,0.2,1);
  transition: transform 10ms cubic-bezier(0.4,0,0.2,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100000px;
  height: 100%;
}

.c8 {
  height: 100%;
}

.c14 .c10 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  position: relative;
}

.c0 .c2 {
  opacity: 0;
}

.c0:hover .c2 {
  opacity: 1;
}

.c0 .c10 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c15 .c10 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c16 .c10 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<div
    className="c0"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onScroll={[Function]}
  >
    <div
      className="c1 muya-carousel-pager-prev"
    >
      <button
        className="c2 c3 muya-carousel-pager-prev-btn"
        onClick={[Function]}
      >
        <svg
          aria-hidden="false"
          className="c4"
          focusable="false"
          viewBox="0 0 1024 1024"
        >
          <path
            d="M501.725 499.81l260.036-381.385a21.67 21.67 0 00-5.742-30.121L626 3.575a21.67 21.67 0 00-29.796 5.851l-333.93 490.385a21.67 21.67 0 000 24.378l333.93 490.276a21.67 21.67 0 0029.796 5.96l129.476-84.512a21.67 21.67 0 006.284-30.013L501.725 524.514a21.67 21.67 0 010-24.703z"
          />
        </svg>
      </button>
    </div>
    <div
      className="c5 muya-carousel-pager-next"
    >
      <button
        className="c2 c6 muya-carousel-pager-next-btn"
        onClick={[Function]}
      >
        <svg
          aria-hidden="false"
          className="c4"
          focusable="false"
          viewBox="0 0 1024 1024"
        >
          <path
            d="M522.187 499.81L262.15 118.426a21.67 21.67 0 015.959-30.121L398.128 3.792a21.67 21.67 0 0129.796 5.851l333.82 490.168a21.67 21.67 0 010 24.378l-333.929 490.276a21.67 21.67 0 01-29.795 5.96l-129.477-84.512a21.67 21.67 0 01-6.284-30.013l260.036-381.386a21.67 21.67 0 00-.108-24.703z"
          />
        </svg>
      </button>
    </div>
    <div
      className="c7 c8 muya-carousel-swipe"
    >
      <div
        className="c9 muya-swipe-panel"
        onTransitionEnd={[Function]}
        style={
          Object {
            "transform": "translate(0px, 0)",
          }
        }
      >
        1111
      </div>
    </div>
    <div
      className="c10 c11 muya-carousel-indicator"
    >
      <div
        className="c12 muya-carousel-indicator-active muya-carousel-indicator-index"
        onClick={[Function]}
      />
      <div
        className="c13 muya-carousel-indicator-index"
        onClick={[Function]}
      />
    </div>
  </div>,
  .c4 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1em;
  height: 1em;
  overflow: hidden;
  fill: currentColor;
}

.c3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: 0;
  margin: 0;
  border: none;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font-size: 14px;
  width: 20px;
  height: 32px;
  border-radius: 2px;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  background-color: rgba(0,0,0,0.5);
  color: rgba(255,255,255,1);
}

.c3:hover,
.c3:active {
  background-color: rgba(0,0,0,0.3);
}

.c6 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: 0;
  margin: 0;
  border: none;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font-size: 14px;
  width: 20px;
  height: 32px;
  border-radius: 2px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  background-color: rgba(0,0,0,0.5);
  color: rgba(255,255,255,1);
}

.c6:hover,
.c6:active {
  background-color: rgba(0,0,0,0.3);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  top: 0;
  height: 100%;
  z-index: 2;
  left: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  top: 0;
  height: 100%;
  z-index: 2;
  right: 0;
}

.c7 {
  position: relative;
  overflow-x: hidden;
}

.c9 {
  position: relative;
  -webkit-transition: -webkit-transform 10ms cubic-bezier(0.4,0,0.2,1);
  -webkit-transition: transform 10ms cubic-bezier(0.4,0,0.2,1);
  transition: transform 10ms cubic-bezier(0.4,0,0.2,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100000px;
  height: 100%;
}

.c8 {
  height: 100%;
}

.c0 {
  position: relative;
}

.c0 .c11 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c10 .c2 {
  opacity: 0;
}

.c10:hover .c2 {
  opacity: 1;
}

<div
    className="c0"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onScroll={[Function]}
  >
    <div
      className="c1 muya-carousel-pager-prev"
    >
      <button
        className="c2 c3 muya-carousel-pager-prev-btn"
        onClick={[Function]}
      >
        <svg
          aria-hidden="false"
          className="c4"
          focusable="false"
          viewBox="0 0 1024 1024"
        >
          <path
            d="M501.725 499.81l260.036-381.385a21.67 21.67 0 00-5.742-30.121L626 3.575a21.67 21.67 0 00-29.796 5.851l-333.93 490.385a21.67 21.67 0 000 24.378l333.93 490.276a21.67 21.67 0 0029.796 5.96l129.476-84.512a21.67 21.67 0 006.284-30.013L501.725 524.514a21.67 21.67 0 010-24.703z"
          />
        </svg>
      </button>
    </div>
    <div
      className="c5 muya-carousel-pager-next"
    >
      <button
        className="c2 c6 muya-carousel-pager-next-btn"
        onClick={[Function]}
      >
        <svg
          aria-hidden="false"
          className="c4"
          focusable="false"
          viewBox="0 0 1024 1024"
        >
          <path
            d="M522.187 499.81L262.15 118.426a21.67 21.67 0 015.959-30.121L398.128 3.792a21.67 21.67 0 0129.796 5.851l333.82 490.168a21.67 21.67 0 010 24.378l-333.929 490.276a21.67 21.67 0 01-29.795 5.96l-129.477-84.512a21.67 21.67 0 01-6.284-30.013l260.036-381.386a21.67 21.67 0 00-.108-24.703z"
          />
        </svg>
      </button>
    </div>
    <div
      className="c7 c8 muya-carousel-swipe"
    >
      <div
        className="c9 muya-swipe-panel"
        onTransitionEnd={[Function]}
        style={
          Object {
            "transform": "translate(0px, 0)",
          }
        }
      >
        1111
      </div>
    </div>
  </div>,
  .c4 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1em;
  height: 1em;
  overflow: hidden;
  fill: currentColor;
}

.c3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: 0;
  margin: 0;
  border: none;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font-size: 14px;
  width: 20px;
  height: 32px;
  border-radius: 2px;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  background-color: rgba(0,0,0,0.5);
  color: rgba(255,255,255,1);
}

.c3:hover,
.c3:active {
  background-color: rgba(0,0,0,0.3);
}

.c6 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: 0;
  margin: 0;
  border: none;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font-size: 14px;
  width: 20px;
  height: 32px;
  border-radius: 2px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  background-color: rgba(0,0,0,0.5);
  color: rgba(255,255,255,1);
}

.c6:hover,
.c6:active {
  background-color: rgba(0,0,0,0.3);
}

.c12 {
  display: inline-block;
  cursor: pointer;
  padding: 4px 0;
  margin-right: 8px;
}

.c12::before {
  box-sizing: content-box;
  content: '';
  display: block;
  height: 4px;
  width: 60px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
}

.c12::before {
  background-color: rgba(255,255,255,1);
}

.c13 {
  display: inline-block;
  cursor: pointer;
  padding: 4px 0;
}

.c13::before {
  box-sizing: content-box;
  content: '';
  display: block;
  height: 4px;
  width: 32px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
}

.c13::before {
  background-color: rgba(255,255,255,0.3);
}

.c13:hover::before {
  background-color: rgba(255,255,255,0.5);
}

.c11 {
  white-space: nowrap;
  position: absolute;
  left: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  bottom: 16px;
  padding: 0 20px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  top: 0;
  height: 100%;
  z-index: 2;
  left: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  top: 0;
  height: 100%;
  z-index: 2;
  right: 0;
}

.c7 {
  position: relative;
  overflow-x: hidden;
}

.c9 {
  position: relative;
  -webkit-transition: -webkit-transform 10ms cubic-bezier(0.4,0,0.2,1);
  -webkit-transition: transform 10ms cubic-bezier(0.4,0,0.2,1);
  transition: transform 10ms cubic-bezier(0.4,0,0.2,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100000px;
  height: 100%;
}

.c8 {
  height: 100%;
}

.c14 .c10 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c15 .c2 {
  opacity: 0;
}

.c15:hover .c2 {
  opacity: 1;
}

.c15 .c10 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  position: relative;
}

.c0 .c10 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c16 .c10 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<div
    className="c0"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onScroll={[Function]}
  >
    <div
      className="c1 muya-carousel-pager-prev"
    >
      <button
        className="c2 c3 muya-carousel-pager-prev-btn"
        onClick={[Function]}
      >
        <svg
          aria-hidden="false"
          className="c4"
          focusable="false"
          viewBox="0 0 1024 1024"
        >
          <path
            d="M501.725 499.81l260.036-381.385a21.67 21.67 0 00-5.742-30.121L626 3.575a21.67 21.67 0 00-29.796 5.851l-333.93 490.385a21.67 21.67 0 000 24.378l333.93 490.276a21.67 21.67 0 0029.796 5.96l129.476-84.512a21.67 21.67 0 006.284-30.013L501.725 524.514a21.67 21.67 0 010-24.703z"
          />
        </svg>
      </button>
    </div>
    <div
      className="c5 muya-carousel-pager-next"
    >
      <button
        className="c2 c6 muya-carousel-pager-next-btn"
        onClick={[Function]}
      >
        <svg
          aria-hidden="false"
          className="c4"
          focusable="false"
          viewBox="0 0 1024 1024"
        >
          <path
            d="M522.187 499.81L262.15 118.426a21.67 21.67 0 015.959-30.121L398.128 3.792a21.67 21.67 0 0129.796 5.851l333.82 490.168a21.67 21.67 0 010 24.378l-333.929 490.276a21.67 21.67 0 01-29.795 5.96l-129.477-84.512a21.67 21.67 0 01-6.284-30.013l260.036-381.386a21.67 21.67 0 00-.108-24.703z"
          />
        </svg>
      </button>
    </div>
    <div
      className="c7 c8 muya-carousel-swipe"
    >
      <div
        className="c9 muya-swipe-panel"
        onTransitionEnd={[Function]}
        style={
          Object {
            "transform": "translate(0px, 0)",
          }
        }
      >
        1111
      </div>
    </div>
    <div
      className="c10 c11 muya-carousel-indicator"
    >
      <div
        className="c12 muya-carousel-indicator-active muya-carousel-indicator-index"
        onClick={[Function]}
      />
      <div
        className="c13 muya-carousel-indicator-index"
        onClick={[Function]}
      />
    </div>
  </div>,
  .c4 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1em;
  height: 1em;
  overflow: hidden;
  fill: currentColor;
}

.c3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: 0;
  margin: 0;
  border: none;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font-size: 14px;
  width: 20px;
  height: 32px;
  border-radius: 2px;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  background-color: rgba(0,0,0,0.5);
  color: rgba(255,255,255,1);
}

.c3:hover,
.c3:active {
  background-color: rgba(0,0,0,0.3);
}

.c6 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: 0;
  margin: 0;
  border: none;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font-size: 14px;
  width: 20px;
  height: 32px;
  border-radius: 2px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  background-color: rgba(0,0,0,0.5);
  color: rgba(255,255,255,1);
}

.c6:hover,
.c6:active {
  background-color: rgba(0,0,0,0.3);
}

.c12 {
  display: inline-block;
  cursor: pointer;
  padding: 4px 0;
  margin-right: 8px;
}

.c12::before {
  box-sizing: content-box;
  content: '';
  display: block;
  height: 4px;
  width: 60px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
}

.c12::before {
  background-color: rgba(255,255,255,1);
}

.c13 {
  display: inline-block;
  cursor: pointer;
  padding: 4px 0;
}

.c13::before {
  box-sizing: content-box;
  content: '';
  display: block;
  height: 4px;
  width: 32px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
}

.c13::before {
  background-color: rgba(255,255,255,0.3);
}

.c13:hover::before {
  background-color: rgba(255,255,255,0.5);
}

.c11 {
  white-space: nowrap;
  position: absolute;
  left: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  bottom: 16px;
  padding: 0 20px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  top: 0;
  height: 100%;
  z-index: 2;
  left: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  top: 0;
  height: 100%;
  z-index: 2;
  right: 0;
}

.c7 {
  position: relative;
  overflow-x: hidden;
}

.c9 {
  position: relative;
  -webkit-transition: -webkit-transform 10ms cubic-bezier(0.4,0,0.2,1);
  -webkit-transition: transform 10ms cubic-bezier(0.4,0,0.2,1);
  transition: transform 10ms cubic-bezier(0.4,0,0.2,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100000px;
  height: 100%;
}

.c8 {
  height: 100%;
}

.c14 .c10 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c15 .c2 {
  opacity: 0;
}

.c15:hover .c2 {
  opacity: 1;
}

.c15 .c10 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c16 .c10 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0 {
  position: relative;
}

.c0 .c10 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<div
    className="c0"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onScroll={[Function]}
  >
    <div
      className="c1 muya-carousel-pager-prev"
    >
      <button
        className="c2 c3 muya-carousel-pager-prev-btn"
        onClick={[Function]}
      >
        <svg
          aria-hidden="false"
          className="c4"
          focusable="false"
          viewBox="0 0 1024 1024"
        >
          <path
            d="M501.725 499.81l260.036-381.385a21.67 21.67 0 00-5.742-30.121L626 3.575a21.67 21.67 0 00-29.796 5.851l-333.93 490.385a21.67 21.67 0 000 24.378l333.93 490.276a21.67 21.67 0 0029.796 5.96l129.476-84.512a21.67 21.67 0 006.284-30.013L501.725 524.514a21.67 21.67 0 010-24.703z"
          />
        </svg>
      </button>
    </div>
    <div
      className="c5 muya-carousel-pager-next"
    >
      <button
        className="c2 c6 muya-carousel-pager-next-btn"
        onClick={[Function]}
      >
        <svg
          aria-hidden="false"
          className="c4"
          focusable="false"
          viewBox="0 0 1024 1024"
        >
          <path
            d="M522.187 499.81L262.15 118.426a21.67 21.67 0 015.959-30.121L398.128 3.792a21.67 21.67 0 0129.796 5.851l333.82 490.168a21.67 21.67 0 010 24.378l-333.929 490.276a21.67 21.67 0 01-29.795 5.96l-129.477-84.512a21.67 21.67 0 01-6.284-30.013l260.036-381.386a21.67 21.67 0 00-.108-24.703z"
          />
        </svg>
      </button>
    </div>
    <div
      className="c7 c8 muya-carousel-swipe"
    >
      <div
        className="c9 muya-swipe-panel"
        onTransitionEnd={[Function]}
        style={
          Object {
            "transform": "translate(0px, 0)",
          }
        }
      >
        1111
      </div>
    </div>
    <div
      className="c10 c11 muya-carousel-indicator"
    >
      <div
        className="c12 muya-carousel-indicator-active muya-carousel-indicator-index"
        onClick={[Function]}
      />
      <div
        className="c13 muya-carousel-indicator-index"
        onClick={[Function]}
      />
    </div>
  </div>,
]
`;

exports[`测试 SwipeCarousel 复杂节点 1`] = `
.c1 {
  position: relative;
  overflow-x: hidden;
}

.c3 {
  position: relative;
  -webkit-transition: -webkit-transform 10ms cubic-bezier(0.4,0,0.2,1);
  -webkit-transition: transform 10ms cubic-bezier(0.4,0,0.2,1);
  transition: transform 10ms cubic-bezier(0.4,0,0.2,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100000px;
  height: 100%;
}

.c2 {
  height: 100%;
}

.c0 {
  position: relative;
}

.c0 .c4 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="c0"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onScroll={[Function]}
>
  <div
    className="c1 c2 muya-carousel-swipe"
  >
    <div
      className="c3 muya-swipe-panel"
      onTransitionEnd={[Function]}
      style={
        Object {
          "transform": "translate(0px, 0)",
        }
      }
    >
      1111
    </div>
  </div>
</div>
`;

exports[`测试 SwipeCarousel 空数组 1`] = `
.c0 {
  position: relative;
}

.c0 .c1 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="c0"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onScroll={[Function]}
/>
`;
